profilelist1exp/unpackaged/objects/Service_Competencies__c.object
<CustomObject>
    <fields>
        <fullName>Action_Performed_By__c</fullName>
        <description>capture the record modifiers email address</description>
        <label>Action Performed By</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Activate_Delete__c</fullName>
        <formula>IF((now()-LastModifiedDate)*24&gt;24, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activate Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Divest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Divest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMC_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>EMC ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EMC_Integration_Status__c</fullName>
        <label>EMC Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting Sync</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Has Error</fullName>
                </value>
                <value>
                    <fullName>Do Not Sync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMC_Last_Sync_date__c</fullName>
        <label>EMC Last Sync date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EMC_Operation__c</fullName>
        <label>EMC Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Creation</fullName>
                    <default>true</default>
                    <label>Creation</label>
                </value>
                <value>
                    <fullName>Deletion</fullName>
                </value>
                <value>
                    <fullName>Updation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entitlement_End_Date__c</fullName>
        <label>Entitlement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exception_message__c</fullName>
        <label>Exception message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mentored_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skills Verified Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Partner_Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Service_Competencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Deployment_End_Date__c</fullName>
        <label>Partner Deployment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Deployment_Issue_Date__c</fullName>
        <label>Partner Deployment Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Track_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Partner_Track__r.Id , Partner_Track__r.Partner_Track_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Track Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Track__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner Track</label>
        <referenceTo>Partner_Track__c</referenceTo>
        <relationshipLabel>Service Competencies</relationshipLabel>
        <relationshipName>Service_Competencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Services_Program_Designation__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AppSync</fullName>
                </value>
                <value>
                    <fullName>Atmos</fullName>
                </value>
                <value>
                    <fullName>Avamar</fullName>
                </value>
                <value>
                    <fullName>Avamar Expert</fullName>
                </value>
                <value>
                    <fullName>Avamar Gen4</fullName>
                </value>
                <value>
                    <fullName>Campus</fullName>
                </value>
                <value>
                    <fullName>Celerra</fullName>
                </value>
                <value>
                    <fullName>Celerra NX4, NS-20</fullName>
                </value>
                <value>
                    <fullName>Centera</fullName>
                </value>
                <value>
                    <fullName>CLARiiON</fullName>
                </value>
                <value>
                    <fullName>CLARiiON AX4, CX4-120/240</fullName>
                </value>
                <value>
                    <fullName>Client Services</fullName>
                </value>
                <value>
                    <fullName>Cloud Advisory Service</fullName>
                </value>
                <value>
                    <fullName>CloudBoost</fullName>
                </value>
                <value>
                    <fullName>Connectrix</fullName>
                </value>
                <value>
                    <fullName>CTA</fullName>
                </value>
                <value>
                    <fullName>Cyber Recovery</fullName>
                </value>
                <value>
                    <fullName>Data Center</fullName>
                </value>
                <value>
                    <fullName>Data Domain</fullName>
                </value>
                <value>
                    <fullName>Data Domain 140/160, 610/620</fullName>
                </value>
                <value>
                    <fullName>Data Domain 160/620</fullName>
                </value>
                <value>
                    <fullName>Data Domain 160/620/640/670</fullName>
                </value>
                <value>
                    <fullName>Data Domain DD160, DD620</fullName>
                </value>
                <value>
                    <fullName>DataDomain DD160, DD620, DD2500, DD4200, DD4500, DD7200, DD990</fullName>
                </value>
                <value>
                    <fullName>Data Domain Foundation</fullName>
                </value>
                <value>
                    <fullName>Data Protection Advisor</fullName>
                </value>
                <value>
                    <fullName>Data Protection Central</fullName>
                </value>
                <value>
                    <fullName>Data Protection Suite</fullName>
                </value>
                <value>
                    <fullName>Data Protection Suite Enterprise Edition</fullName>
                </value>
                <value>
                    <fullName>Data Protection Suite for Applications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Competencies_Held__c</fullName>
        <defaultValue>&quot;--None--&quot;</defaultValue>
        <label>Services Competencies Held</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AppSync Deployment</fullName>
                </value>
                <value>
                    <fullName>AppSync Support</fullName>
                </value>
                <value>
                    <fullName>Atmos Deployment</fullName>
                </value>
                <value>
                    <fullName>Avamar Deployment</fullName>
                </value>
                <value>
                    <fullName>Avamar Support</fullName>
                </value>
                <value>
                    <fullName>Azure Stack Deployment</fullName>
                    <isActive>false</isActive>
                    <label>Azure Stack Deployment</label>
                </value>
                <value>
                    <fullName>Azure Stack Support</fullName>
                    <isActive>false</isActive>
                    <label>Azure Stack Support</label>
                </value>
                <value>
                    <fullName>Campus Networking Deployment</fullName>
                </value>
                <value>
                    <fullName>Campus Networking Deployment Co-deliver</fullName>
                </value>
                <value>
                    <fullName>Campus Networking Support</fullName>
                </value>
                <value>
                    <fullName>Centera Deployment</fullName>
                </value>
                <value>
                    <fullName>Centera Support</fullName>
                </value>
                <value>
                    <fullName>Client Deployment</fullName>
                </value>
                <value>
                    <fullName>Client Deployment Co-deliver</fullName>
                </value>
                <value>
                    <fullName>CloudBoost Deployment</fullName>
                </value>
                <value>
                    <fullName>CloudBoost Support</fullName>
                </value>
                <value>
                    <fullName>Cloud Tiering Appliance (CTA) Deployment</fullName>
                </value>
                <value>
                    <fullName>Connectrix Deployment</fullName>
                </value>
                <value>
                    <fullName>CyberRecovery Deployment</fullName>
                    <isActive>false</isActive>
                    <label>CyberRecovery Deployment</label>
                </value>
                <value>
                    <fullName>Cyber Recovery Deployment</fullName>
                </value>
                <value>
                    <fullName>CyberRecovery Support</fullName>
                    <isActive>false</isActive>
                    <label>CyberRecovery Support</label>
                </value>
                <value>
                    <fullName>Cyber Recovery Support</fullName>
                </value>
                <value>
                    <fullName>Data Center Networking Deployment</fullName>
                </value>
                <value>
                    <fullName>Data Center Networking Deployment Co-deliver</fullName>
                </value>
                <value>
                    <fullName>Data Center Networking Support</fullName>
                </value>
                <value>
                    <fullName>Data Domain Deployment</fullName>
                </value>
                <value>
                    <fullName>Data Domain Deployment Co-deliver</fullName>
                </value>
                <value>
                    <fullName>Data Domain Support</fullName>
                </value>
                <value>
                    <fullName>Data Protection Advisor Deployment</fullName>
                </value>
                <value>
                    <fullName>Data Protection Central Deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Program_Designation__c</fullName>
        <label>Services Program Designation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Consulting Resource and Deployment Status</fullName>
                </value>
                <value>
                    <fullName>Deployment Resource and Delivery Status</fullName>
                </value>
                <value>
                    <fullName>Master Services</fullName>
                </value>
                <value>
                    <fullName>Onsite Support Resource and Deployment Status</fullName>
                </value>
                <value>
                    <fullName>QSS Implement</fullName>
                </value>
                <value>
                    <fullName>QSS Support</fullName>
                </value>
                <value>
                    <fullName>Remote Support Resource and Deployment Status</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Competencies</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Service Competency ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Competencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validation_on_Partner_Track_For_SC</fullName>
        <active>true</active>
        <description>Can&apos;t change Partner Track field once created</description>
        <errorConditionFormula>AND( !(ISNEW()),ISCHANGED(Partner_Track__c))</errorConditionFormula>
        <errorMessage>Cannot change the Partner Track</errorMessage>
    </validationRules>
</CustomObject>